add new user-service springboot to access mysql

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
   <modules>
     <module>name-service</module>
     <module>greetings-service</module>
+    <module>user-service</module>
     <module>itest</module>
   </modules>
 </project>
