--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/db_example
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
